Changes in version 1.7.3 ------------------------ * show error log for the last fragment if log exist

--- a/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
@@ -18,9 +18,9 @@
       <div class="descriptionOutput" id="description-$id">
         #foreach( $line in $steps )
           #if ($meta.shouldEscapeOutput())
-            $utils.escapeHTMLString($line)<br/>
+            <span style="display: list-item;">$utils.escapeHTMLString($line)</span>
           #else
-            $line
+            <span style="display: list-item;">$line</span>
           #end
         #end
         </div>
