Changes in version 1.7.4 ------------------------ * show stackTrace for the last fragment

--- a/src/main/resources/testee/it/reportng/templates/html/reveal.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/reveal.html.vm
@@ -19,6 +19,7 @@
                                     #if($utils.screenshotHasFragment($screenshot, $fragment.key))
                                         #if ($testResult.throwable && ( $testResult.status == 2 || $meta.shouldShowExpectedExceptions()))
                                             <div class="stackTrace" id="exception-$id" style="display: block">
+                                                    $utils.escapeHTMLString( $testResult.throwable.toString() )<br/>
                                                 #foreach ($element in $testResult.throwable.stackTrace)
                                                     $utils.escapeHTMLString( $element.toString() )<br/>
                                                 #end
