--- a/src/main/resources/testee/it/reportng/templates/html/reveal.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/reveal.html.vm
@@ -7,21 +7,29 @@
             <p class="close" onclick="modalClose()">$testResult.name</p>
             <table>
                 <tr>
-                    <td style="text-align: left; font-size: small; min-width: 15rem">
+                    <td style="text-align: left; font-size: small; min-width: 15rem; max-width: 30rem">
                         #foreach($fragment in $fragments.entrySet())
                             #set ($normalizedFragment = $utils.normalizeFragment($fragment.key))
                             #if (!$normalizedFragment.isEmpty())
                                 <a #if($utils.screenshotHasFragment($screenshot, $fragment.key))style="display: list-item; color: red;"#end
                                    href="#/$fragment.value">$normalizedFragment</a>
                                 #if(!$utils.screenshotHasFragment($screenshot, $fragment.key))<br/>#end
-                                ## Show error log (if exist) for the last fragment
+                                ## Show relevant error log (if exist) for the last fragment
                                 #if($velocityCount == $fragments.size())
                                     #if($utils.screenshotHasFragment($screenshot, $fragment.key))
                                         #if ($testResult.throwable && ( $testResult.status == 2 || $meta.shouldShowExpectedExceptions()))
-                                            <div class="stackTrace" id="exception-$id" style="display: block">
-                                                    $utils.escapeHTMLString( $testResult.throwable.toString() )<br/>
-                                                #foreach ($element in $testResult.throwable.stackTrace)
-                                                    $utils.escapeHTMLString( $element.toString() )<br/>
+                                            <div class="stackTrace" id="exception-$id"
+                                                      style="display: block; min-width: 30rem; max-width: 30rem">
+                                                #if($testResult.throwable.detailMessage && $testResult.throwable.detailMessage.length() > 0)
+                                                    $testResult.throwable.detailMessage<br/>
+                                                #end
+                                                #set ($relevantStackTraceMessage = $utils.getRelevantStackTraceMessage($testResult))
+                                                #if($relevantStackTraceMessage.length() > 0)
+                                                    $relevantStackTraceMessage<br/>
+                                                #else
+                                                    #foreach ($element in $testResult.throwable.stackTrace)
+                                                        $utils.escapeHTMLString($element.toString())<br/>
+                                                    #end
                                                 #end
                                             </div>
                                         #end
